fix: layout issues with navbar

--- a/src/components/Nav/navbar.module.scss
+++ b/src/components/Nav/navbar.module.scss
@@ -24,12 +24,18 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        gap: 4rem;
+
+        @include mixins.respond(phone-large) {
+            gap: 2rem;
+        }
     }
 
     &__brand {
         max-height: 4rem;
         margin-right: auto;
-        display: inline-block;
+        display: inline-flex;
+        align-items: center;
         text-decoration: none;
         color: inherit;
     }
@@ -74,10 +80,9 @@
             width: 2rem;
             height: 2px;
             display: inline-block;
-            margin-left: 1.5rem;
             background-image: linear-gradient(to bottom right, var(--primary-light), var(--primary-dark));
             position: relative;
-            top: 1.1rem; //fixes offset
+            top: .8rem; //fixes offset
             transition: all 0.2s;
             cursor: pointer;
 
@@ -131,14 +136,11 @@
 
     &__list {
         display: inline-flex;
+        gap: 3.5rem;
         font-family: var(--font-mono);
         font-size: 1.4rem;
         list-style: none;
         box-shadow: none;
-
-        & > li {
-            font-size: inherit;
-        }
 
         &_container {
             @include mixins.respond(phone-large) {
@@ -180,8 +182,9 @@
 
     &__item {
         display: inline-block;
-        margin: 0 2rem;
         position: relative;
+        font-size: inherit;
+        margin: 0 !important;
         transition: text-shadow 0.2s;
 
         @include mixins.respond(phone-large) {
@@ -196,12 +199,12 @@
 
         &::before {
             content: '';
-            width: 170%;
+            width: calc(100% + 4rem);
             height: 4rem;
             position: absolute;
             top: 50%;
             left: 50%;
-            border: 2px solid var(--primary-dark);
+            border: 2px solid var(--primary-light);
             border-radius: 2px;
             transform: translate(-50%, -50%) scale(0);
             z-index: -10;
